[package]
name = "litho"
version = "0.1.0"
authors = ["Tim Likarish"]
edition = "2018"
license-file = "LICENSE"

[dependencies]
base64 = "0.13.0"
keyring = "0.10.1"
rand = "0.8.3"
regex = "1"
reqwest = { version = "0.11.2", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9.3"
simple-server = "0.4.0"
whoami = "1.1.1"

[dev-dependencies]
httpmock = "0.5"
