[package]
name = "litho"
version = "0.1.2"
authors = ["Tim Likarish"]
edition = "2018"
license-file = "LICENSE"

[dependencies]
base64 = "0.13.0"
chrono = "0.4"
keyring = "0.10.1"
rand = "0.8.3"
regex = "1"
reqwest = { version = "0.11.2", features = ["blocking"] }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
structopt = "0.3.13"
tiny_http = "0.12"
urlencoding = "2.1.2"
whoami = "1.5.1"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
